kafka-implementation in the demo application (#11)
